2013-08-30  Simon Fraser  <simon.fraser@apple.com>

        Video with object-fit: cover can spill outside the box
        https://bugs.webkit.org/show_bug.cgi?id=52103

        Reviewed by Dean Jackson.
        
        object-fit on renderers which use accelerated compositing needs special
        treatment.
        
        For directly composited images, and video, GraphicsLayer needs to know
        both the size of the content layer, and also a rectangle at which this
        should be clipped (because, for the first time, that content layer can be
        larger than the renderer's content box).
        
        AVFoundation would always aspect-ratio fit video by default, so plumb
        through MediaPlayer a way to override that when object-fit requires it.
        
        Added a LAYER_TREE_INCLUDES_CONTENT_LAYERS enum to the layerTreeAsText()
        flags so we can dump content layers for testing.

        Tests: compositing/images/direct-image-object-fit.html
               compositing/reflections/direct-image-object-fit-reflected.html
               compositing/video/video-object-fit.html

        * page/Frame.h: New LayerTreeFlagsIncludeContentLayers flag.
        * platform/graphics/GraphicsLayer.h: New flag.
        * platform/graphics/MediaPlayer.cpp:
        (WebCore::MediaPlayer::shouldMaintainAspectRatio):
        (WebCore::MediaPlayer::setShouldMaintainAspectRatio):
        * platform/graphics/MediaPlayer.h:
        * platform/graphics/MediaPlayerPrivate.h:
        (WebCore::MediaPlayerPrivateInterface::shouldMaintainAspectRatio):
        (WebCore::MediaPlayerPrivateInterface::setShouldMaintainAspectRatio):
        * platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:
        (WebCore::MediaPlayerPrivateAVFoundation::MediaPlayerPrivateAVFoundation):
        (WebCore::MediaPlayerPrivateAVFoundation::setShouldMaintainAspectRatio):
        * platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.h: